<resources>
    <string name="app_name">BudgetApp</string>

    <string name="BHead"> My Bills </string>
    <string name="tvIncome"> Available </string>
    <string name="tvAmount"> Rs.50000 </string>
    <string name="btnViewBill"> View All Bills </string>
    <string name="btnAddBill"> Add Your Bills </string>
    <string name="tvDip"> Manage Your Bills and Save Your Money </string>

    <string name="AddTitle"> Register </string>
    <string name="tvBillId"> Bill Id </string>
    <string name="etBillId">  </string>
    <!--    <string name="tvSType"> Service Name </string>-->
    <string name="tvBillName"> Bill Name </string>
    <string name="etBillName"> Service </string>
    <string name="tvAccName"> Account Name </string>
    <string name="etAccName"> Account Name </string>
    <string name="tvAccNum"> Account Number </string>
    <string name="etAccNum"> Account Number </string>
    <string name="tvPayAmount"> Amount To Be Pay </string>
    <string name="etPayAmount"> Pay Amount </string>
    <string name="tvDis"> Description </string>
    <string name="etDis"> Description </string>
    <string name="btnSave"> Save Data </string>
    <string name="btnClear"> Clear Data </string>

    <string name="DetailTitle"> Bill Details </string>
    <string name="btnUpdate"> Update </string>
    <string name="btnProceed"> Proceed </string>
    <string name="btnDelete"> Delete Data </string>

    <string name="PHead"> Make Payment </string>
    <string name="etHolderName"> Enter CardHolder Name </string>
    <string name="etCardNumber"> Enter Card Number </string>
    <string name="etYear"> Expired Year </string>
    <string name="etMonth"> Expired Month </string>
    <string name="etCvc"> CVC </string>
    <string name="cbAgreement">I agree to terms and conditions</string>
    <string name="btnPay"> pay </string>
    <string name="btnCancel"> cancel </string>

    <string-array name="Choose_Service">
        <item> Choose Service</item>
        <item> Electricity</item>
        <item> Water </item>
        <item> Insurance </item>
        <item> Utilities </item>
        <item> Others </item>
    </string-array>

    <string-array name="Years">
        <item> </item>
        <item> 2023 </item>
        <item> 2024 </item>
        <item> 2025 </item>
        <item> 2026 </item>
        <item> 2027 </item>
        <item> 2028 </item>
    </string-array>

    <string-array name="Month">
        <item> </item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>

    </string-array>


    <string-array name="Choose_category">
        <item></item>
        <item>Food</item>
        <item>Medicine</item>
        <item>Education</item>
        <item>Other</item>
    </string-array>

    <string name="text_income">INCOME</string>
    <string name="income_heading">INCOME</string>
    <string name="profile_head">PROFILE</string>
    <string name="total_income">Rs. 76,000.00</string>
    <string name="income_text1">Monthly Salary</string>
    <string name="income2">Rent Income</string>
    <string name="income2Rs">10,000</string>
    <string name="income3" />
    <string name="date1">01 / 03 / 2023</string>


    <!--Budget plan-->
    <string name="app_name">PlanManegment</string>
    <string name="budget_plan">Budget Plan</string>
    <string name="income">Income</string>
    <string name="incamount">Rs.50000.00</string>
    <string name="btnaddnewplan">Add New Plan</string>
    <string name="ckboxfoods">Foods</string>
    <string name="foodvalue">Rs.15000.00</string>
    <string name="ckboxtransport">Transport</string>
    <string name="tranportvalue">Rs.10000.00</string>
    <string name="ckboxmedicine">Medicine</string>
    <string name="medicinevalue">Rs.5000.00</string>
    <string name="btnedit">Edit</string>
    <string name="newplan">New Plan</string>
    <string name="categoryname">Category Name</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="ui2categoryname">Category Name</string>
    <string name="ui2amount">Amount</string>
    <string name="btnproceed">Proceed</string>
    <string name="btnplanupdate">UPDATE</string>
    <string name="btnplandelete">DELETE</string>


</resources>