<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".activities.AddBill">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/income_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/DetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="117dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="16dp"
            android:text="@string/AddTitle"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="375dp"
            android:layout_height="618dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailTitle">

            <!--            <TextView-->
            <!--                android:id="@+id/tvSType"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="32dp"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:layout_marginBottom="8dp"-->
            <!--                android:text="@string/tvSType"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textSize="20sp"-->
            <!--                android:textStyle="bold" />-->

            <Spinner
                android:id="@+id/etBillName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:entries="@array/Choose_Service"
                android:inputType="textPersonName"
                android:text="@string/etBillName" />

            <TextView
                android:id="@+id/tvAccName"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tvAccName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAccName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/etAccName"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvAccNum"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tvAccNum"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAccNum"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/etAccNum"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvPayAmount"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tvPayAmount"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPayAmount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/etPayAmount"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvDis"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tvDis"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDis"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/etDis"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnNewUpdate"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="112dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="112dp"
                android:backgroundTint="@color/blue"
                android:text="@string/btnSave"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="25dp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="110dp"
                android:backgroundTint="@color/white"
                android:text="@string/btnClear"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="25dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>